# smart_val

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/smart_val/: definitions.hpp  smart_val.hpp  unique_val.hpp
test/: CMakeLists.txt
test/source/: smart_val_test.cpp
